force-app/main/default/objects/custom_create154__c/custom_create154__c.object-meta.xml
<CustomObject>
    <label>Custom created object154</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects154</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>