force-app/main/default/objects/custom_create154__c/fields/custom_create_154field569__c.field-meta.xml
<CustomField>
    <fullName>custom_create_154field569__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 154field569</label>
    <type>Checkbox</type>
</CustomField>